--- a/Tankogeddon/Tankogeddon.uproject
+++ b/Tankogeddon/Tankogeddon.uproject
@@ -11,7 +11,8 @@
 			"AdditionalDependencies": [
 				"Engine",
 				"CoreUObject",
-				"GeometryFramework"
+				"GeometryFramework",
+				"AIModule"
 			]
 		}
 	],
