Slate widget added

--- a/Tankogeddon/Tankogeddon.uproject
+++ b/Tankogeddon/Tankogeddon.uproject
@@ -13,7 +13,9 @@
 				"CoreUObject",
 				"GeometryFramework",
 				"AIModule",
-				"UMG"
+				"UMG",
+				"Slate",
+				"SlateCore"
 			]
 		}
 	],
